fix(core): fix smooth min and max + fix collapse and overlay

--- a/src/docs/assets/styles/theme.css
+++ b/src/docs/assets/styles/theme.css
@@ -1204,8 +1204,8 @@ div.btn {
   z-index: 200;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  bottom: 0;
+  right: 0;
   overflow: hidden;
   -webkit-overflow-scrolling: touch;
 }
